# Street_Light_Detection

./: .gitignore  ARCHITECTURE_NOTE.md  DELETION_PLAN.md  MIGRATION.md  README.md  _tmp_sequence_manifest.json  pyproject.toml  requirements.txt
configs/measurement/: stronger_research_v1.json
datasets/: OS_datasets.md  README.md
documentation/literature_review/agenticlitreviews/: litreview_claude.md  litreview_gemini.md  litreview_gpt5.4.md  (+1 more)
documentation/system_design/: README.md
final_paper/: main.aux  main.tex
rbccps_od/: __init__.py  __main__.py
scripts/: build_retinex_only_dataset.py  build_zero_dce_retinex_dataset.py  build_zerodce_only_dataset.py  run_cse_ablation.py
scripts/annotation_automation/: README.md  audit_manual_reviews_v2.py  build_annotation_corpus.py  build_annotation_corpus_v2.py  build_annotation_corpus_v3.py  build_review_subset.py  export_annotation_candidates.py  integrate_reviewed_data.py  materialize_review_batches.py  prefill_jobin_positive_reviews.py  prepare_annotation_corpus_v3_reviews.py  review_app.py  run_review_app.ps1  run_review_app.sh  train_yolov26.py
scripts/measurement/: run_all_slots_smoke.py
src/rbccps_annotator/: cli.py  exports.py  schema.py  segmenter.py  server.py  workspace.py
src/rbccps_measurement/: pipeline.py
src/rbccps_od.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ablation_training.py  test_corpus_v3.py  test_measurement_contracts.py  test_measurement_pipeline.py  test_rbccps_annotator.py  test_review_sync.py  test_split_policy.py  test_yolo_export.py
(+81 files in other folders)
