[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbccps-od"
version = "0.1.0"
description = "Nighttime streetlight object-detection package with baseline YOLOv26 and modular advanced pipeline hooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = ["ultralytics>=8.2.0", "pillow>=10.0.0", "wandb>=0.17.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
